[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fgraph2"
version = "0.1.0"
description = "A toolkit that parses a Fortran codebase to a layered, structured knowledge graph instance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "neomodel",
    "fparser",
    "docker-py",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel",
    "matplotlib"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

